# c_lab

./: README.md
assembler/: CMakeLists.txt  Makefile  README.md  READNE.md  assembler  assembler.c  firstStage.c  firstStage.h  secondStage.c  stages.h  structs.h  system.h  tableMgmt.c  utils.c  utils.h
assembler/Untitled.xcworkspace/xcuserdata/mbp.xcuserdatad/: UserInterfaceState.xcuserstate
assembler/assembler.dSYM/Contents/Resources/DWARF/: assembler
assembler/tests/: i1.ent  i1.ob  i2.as  i2err.as  t  t.c
assembler_v1.4/assembler_v1.4/: Makefile  assembler  assembler.c  firstStage.c  secondStage.c  stages.h  structs.h  system.h  tableMgmt.c  utils.c  utils.h
assembler_v1.4/assembler_v1.4.xcodeproj/: project.pbxproj
assembler_v1.4/assembler_v1.4.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
assembler_v1.4/assembler_v1.4.xcodeproj/xcshareddata/xcschemes/: asm2.xcscheme
assembler_v1.4/assembler_v1.4/assembler.dSYM/Contents/Resources/DWARF/: assembler
assembler_v1.4/assembler_v1.4/tests/: i1.as  i1err.as  i2.as  i2.ent  i2.ext  i2.ob  i2err.as
books/: .gitignore
debugging/: CMakeLists.txt  Makefile  a.c  b
exams/: CMakeLists.txt  Makefile  a  main.c  test.c
m11/match/: Makefile  common.h  match.c  patterns  strings
m11/sequence/: Makefile  common.h  sequence.c  strings
m12/: Makefile  adjacency.c  common.h
m22/: Makefile  common.h  complex.c  complex.h  mycomp.c
m22/tests/: badInput  badInputTest_op  goodInput  in  outA  outB  outC  outD  outE  outF
m23/: Makefile  in  numbers  numbers.c  out  q1  whole_range
(+2 files in other folders)
